# Admin-Face-Detection

./: LICENSE  README.md  main.py  pyproject.toml  svm_model.pkl  train.py
